@@ -25,11 +25,12 @@
         <maven.compiler.target>17</maven.compiler.target>
         <delombok.source>${project.build.directory}/delombok-sources</delombok.source>
 
-        <finex-evolution.version>1.1</finex-evolution.version>
+        <finex-evolution.version>1.3</finex-evolution.version>
 
         <junit.version>5.8.2</junit.version>
         <junit-jupiter.version>5.8.2</junit-jupiter.version>
         <mockito.version>4.3.1</mockito.version>
+        <testcontainers.version>1.16.3</testcontainers.version>
         <slf4j-api.version>1.7.30</slf4j-api.version>
         <logback.version>1.2.3</logback.version>
         <lombok.version>1.18.20</lombok.version>
@@ -41,7 +42,6 @@
         <commons-net.version>3.6</commons-net.version>
         <guava.version>30.1.1-jre</guava.version>
         <guice.version>5.0.1</guice.version>
-        <gson.version>2.8.6</gson.version>
         <hibernate.version>5.5.0.Final</hibernate.version>
         <postgresql.version>42.2.20</postgresql.version>
         <redisson.version>3.16.3</redisson.version>
@@ -54,9 +54,10 @@
         <mycila-guice-jsr250.version>5.0</mycila-guice-jsr250.version>
         <mycila-jmx.version>1.1.ga</mycila-jmx.version>
         <juel.version>2.2.7</juel.version>
-        <manifold.version>2022.1.11</manifold.version>
+        <manifold.version>2022.1.18</manifold.version>
         <fastutil.version>8.5.8</fastutil.version>
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+        <jackson.version>2.12.5</jackson.version>
     </properties>
 
     <repositories>
@@ -112,6 +113,13 @@
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-junit-jupiter</artifactId>
                 <version>${mockito.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers-bom</artifactId>
+                <version>${testcontainers.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -194,11 +202,6 @@
                 <groupId>javax.annotation</groupId>
                 <artifactId>javax.annotation-api</artifactId>
                 <version>${javax.annotation-api.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.code.gson</groupId>
-                <artifactId>gson</artifactId>
-                <version>${gson.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
@@ -290,8 +293,16 @@
                 <version>${finex-evolution.version}</version>
                 <exclusions>
                     <exclusion>
-                        <groupId>com.google.code.gson</groupId>
-                        <artifactId>gson</artifactId>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-annotations</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-core</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-databind</artifactId>
                     </exclusion>
                     <exclusion>
                         <groupId>com.google.guava</groupId>
@@ -355,6 +366,13 @@
                 <groupId>it.unimi.dsi</groupId>
                 <artifactId>fastutil</artifactId>
                 <version>${fastutil.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson</groupId>
+                <artifactId>jackson-bom</artifactId>
+                <version>${jackson.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -464,6 +482,36 @@
                                 <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                             </manifest>
                         </archive>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>3.3.1</version>
+                    <executions>
+                        <execution>
+                            <id>javadoc-package</id>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <additionalJOption>--enable-preview --add-modules jdk.incubator.vector --add-modules jdk.incubator.foreign</additionalJOption>
+                        <sourcepath>${delombok.source}</sourcepath>
+                        <encoding>${project.build.sourceEncoding}</encoding>
+                        <doclet>nl.talsmasoftware.umldoclet.UMLDoclet</doclet>
+                        <docletArtifact>
+                            <groupId>nl.talsmasoftware</groupId>
+                            <artifactId>umldoclet</artifactId>
+                            <version>2.0.17</version>
+                        </docletArtifact>
+                        <useStandardDocletOptions>true</useStandardDocletOptions>
+                        <additionalOptions>
+                            <!-- https://github.com/talsma-ict/umldoclet/blob/develop/usage.md#additional-options -->
+                            <additionalOption>-umlImageFormat svg</additionalOption>
+
+                        </additionalOptions>
                     </configuration>
                 </plugin>
                 <plugin>
